# VitaAI

./: .gitignore  AGENTS.md  README.md
backend/: .env.example  pyproject.toml
backend/app/: db.py  main.py
backend/app/core/: config.py  deps.py  security.py
backend/app/models/: health.py  user.py
backend/app/routers/: auth.py  organs.py  profile.py  records.py
backend/app/services/: alert_engine.py  indicator_mapper.py  interpret_record.py  parse_report.py
backend/tests/: conftest.py  test_auth.py  test_records.py
docs/superpowers/plans/: 2026-04-29-baseui-to-shadcn-migration.md  2026-04-29-trend-first-ui-redesign.md
docs/superpowers/specs/: 2026-04-29-baseui-to-shadcn-migration-design.md  2026-04-29-trend-first-ui-redesign-design.md
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/api/: auth.ts  client.ts  organs.ts  profile.ts  records.ts
frontend/src/components/: Layout.tsx  LoadingSpinner.tsx  ProtectedRoute.tsx
frontend/src/components/app/: empty-state.tsx  form-field.tsx  page-shell.tsx  status-banner.tsx
frontend/src/components/ui/: alert.tsx  button.tsx  card.tsx  checkbox.tsx  input.tsx  select.tsx  separator.tsx  tabs.tsx
frontend/src/pages/: DashboardPage.tsx  LoginPage.tsx  NewRecordPage.tsx  OrgansPage.tsx  ProfilePage.tsx  RecordDetailPage.tsx  RecordsPage.tsx  RegisterPage.tsx
frontend/src/store/: authStore.ts
frontend/src/types/: index.ts
tasks/: plan.md  todo.md
